# OpenWallpaper-Plasma

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: FUNDING.yml
Plugin/: CMakeLists.txt
Plugin/DBus/: dbus_manager.xml
Plugin/Source/: abstract_render.hpp  dbus_manager.cpp  dbus_manager.hpp  debug.hpp  default_scene.cpp  default_scene.hpp  dll_loader.cpp  dll_loader.hpp  openwallpaperplasma_plugin.cpp  openwallpaperplasma_plugin.h  qmldir  render_manager.cpp  render_manager.hpp  wdesktop.cpp  wdesktop.hpp
Plugin/package/: metadata.desktop  metadata.json
Plugin/package/contents/config/: main.xml
Plugin/package/contents/ui/: VideoWallpaper.qml  config.qml  main.qml
